--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,36 @@
 /local.properties
 /.idea/workspace.xml
 /.idea/libraries
+/.idea/
 .DS_Store
 /build
 /captures
 .externalNativeBuild
+
+# Built application files
+*.apk
+*.ap_
+
+# Files for the ART/Dalvik VM
+*.dex
+
+# Java class files
+*.class
+
+#secret
+apk/
+
+# Generated files
+bin/
+gen/
+out/
+
+# Gradle files
+.gradle/
+build/
+
+.idea/misc.git gitxml
+.idea/inspectionProfiles/Project_Default.xml
+
+# Local configuration file (sdk path, etc)
+local.properties
